# code-explainer

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .mypy.ini  .optimization_log  .pre-commit-config.yaml  .style.toml  API_DOCUMENTATION.md  ARCHITECTURE.md  BRANCH_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMITS_11_20_PLAN.md  COMPREHENSIVE_OPTIMIZATION_REPORT.md  CONTRIBUTING.md  CONTRIBUTION_PLAN_10_DAYS.md  CRITIQUE.md  DAY_2_OPTIMIZATION_SUMMARY.md  DEAD_CODE_CLEANUP_FEB_3_2026.md  DEPENDENCY_AUDIT.md  DEVELOPMENT.md  DUPLICATE_CODE_REFACTORING.md  Dockerfile  EFFICIENCY_IMPROVEMENTS.md  ERROR_HANDLING_GUIDE.md  FINAL_STATUS_REPORT.md  FRESH_CODEBASE_AUDIT_NOV_2025.md  FRESH_CRITIQUE_NOVEMBER_2025.md  FRESH_START_OPTIMIZATION_SUMMARY.md  ICML_PAPER.md  ICML_SUBMISSION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  IMPORT_CLEANUP_SUMMARY.md  IMPROVEMENT_SUMMARY.md  INFRASTRUCTURE_UPGRADE_SUMMARY.md  LICENSE  MODEL_CARD_TEMPLATE.md  (+50 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  DISCUSSIONS.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  contribution_test.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: add_type_hints_model_trainer.md  bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  good_first_issue.md  rfc.yml  roadmap.md  task.md  tests_trainer_small_config.md
.github/workflows/: ab-compare.yml  build.yml  ci-integration.yml  ci-lite.yml  ci.yml  codeql.yml  data-governance.yml  deploy.yml  docs-and-eval-nightly.yml  docs.yml  enhanced-ci.yml  eval-nightly.yml  performance-monitoring.yml  quality-assurance.yml  release.yml  security-monitoring.yml  stale.yml
alembic/: env.py  script.py.mako
alembic/versions/: fefce1f791bf_initial_database_schema.py
benchmarks/: OPEN_EVALS_SPEC.md  benchmark_inference.py  config.yaml
benchmarks/datasets/: smoke.jsonl
cache/: index.json
configs/: advanced_cache.yaml  codebert-base.yaml  codellama-instruct.yaml  codet5-base.yaml  codet5-small.yaml  default.yaml  enhanced.yaml  icml_experiment.yaml  icml_experiment_full.yaml  starcoder2-instruct.yaml  starcoderbase-1b.yaml
configs/evals/: minimal.yaml  standard.yaml
data/: INTAKE_TEMPLATE.yaml  README.md  code_explainer.db  eval.json  test.json  train.json
data/examples/: README.md  tiny_eval.jsonl
docs/: RELEASE_CHECKLIST.md  SOTA_ANALYSIS.md  SOTA_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md  ablation_guide.md  advanced_evaluation_tutorial.md  advanced_llm_judge_tutorial.md  api-reference.md  api.md  api_usage_examples.md  caching.md  configuration.md  data-governance.md  dataset_governance.md  device-testing.md  device_compatibility_plan.md  docker.md  enhanced_rag.md  evaluation.md  evaluation_recipes.md  governance.md  icml_experiments.md  index.md  installation.md  intelligence_enhancement_plan.md  judge_reliability.md  mkdocs.yml  open-evals.md  open_evals_reading_list.md  performance.md  performance_benchmarking.md  performance_tuning.md  plan_review.md  project_critique.md  provenance_cards.md  quickstart.md  reimagine.md  research_evaluation_system.md  retrieval-advanced.md  retrieval.md  (+5 more)
docs/tutorials/: zero_to_results.md
evals/: __init__.py  __main__.py  cli.py  config.py  datasets.py  metrics.py  runner.py  statistical.py
examples/: NOTEBOOKS_README.md  README.md  advanced_features.md  api_retrieval_example.py  code_explainer_api_quickstart.ipynb  code_explainer_comprehensive_guide.ipynb  colab_quickstart.ipynb  enhanced_rag_demo.py  eval_report_template.md  preset_switching.md  strategy_examples.md
examples/eval_results/: sample_predictions.jsonl
helm/code-explainer/: Chart.yaml  values.yaml
k8s/: 00-namespace.yaml  01-api-deployment.yaml  02-rbac.yaml  03-network-policy.yaml
monitoring/: grafana-dashboard.json  prometheus.yml
rfcs/: 2025-08-28-open-evals-phase2.md
scripts/: ab_compare_strategies.py  ablation_matrix.py  analyze_codebase.py  bench_hash.py  bench_regex.py  benchmark_data_loading.py  check_licenses.py  commit_batch1.sh  commit_batch2.sh  duplicate_code_detector.py  enhanced_eval.py  generate_performance_report.py  generate_security_report.py  health_check.sh  import_audit.py  pii_scan.py  prepare_icml_datasets.py  profile_api.py  provenance_card.py  provenance_eval.py  run_api.sh  run_bench.sh  run_failing_tests.sh  run_icml_experiments.py  run_smoke_eval.py  security_scan.py  security_scan.sh  serve_api.sh  test_advanced_cache.py  type_hint_analyzer.py  validate_dataset.py  validate_intake.py
src/code_explainer/: __init__.py  advanced_analytics.py  advanced_cache.py  advanced_contamination_detection.py  advanced_plugin_system.py  advanced_security.py  advanced_statistical_evaluation.py  advanced_ui_ux.py  adversarial_testing.py  analytics_dashboard.py  api.py  api_documentation_generator.py  api_simple.py  async_processor.py  cache.py  cache_ttl.py  ci_cd.py  cicd_pipeline.py  cli.py  cli_evaluation.py  cloud_deployment.py  code_generation.py  collaboration_hub.py  common_utils.py  comprehensive_docs.py  config_management.py  (+80 more)
tests/: conftest.py  conftest_parallel.py  pytest.ini  test_advanced_features.py  test_api_batch.py  test_api_v2.py  test_batch_async.py  test_cache.py  test_cache_write_behind.py  test_cli_eval.py  test_cli_eval_jsonl.py  test_cli_explain.py  test_compression.py  test_data_utils.py  test_datasets.py  test_enhanced_rag.py  test_integration.py  test_integration_new_features.py  test_lazy_loading.py  test_model.py  test_model_cache.py  test_performance_regression.py  test_prompt_strategies.py  test_prompt_templates.py  test_reranker.py  test_research_evaluation_integration.py  test_result_cache.py  test_retrieval.py  test_security.py  test_symbolic.py  test_trainer.py  test_utils.py  testing_utilities.py  validate_intelligence.py
(+164 files in other folders)
