[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "code-explainer"
version = "0.3.0"
description = "An efficient LLM-powered tool for explaining code snippets"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Rajat Sainju", email = "your.email@example.com"},
]
keywords = ["nlp", "transformers", "code", "explainability", "LLM"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Documentation",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/rajatsainju2025/code-explainer"
Documentation = "https://github.com/rajatsainju2025/code-explainer#readme"
Repository = "https://github.com/rajatsainju2025/code-explainer"
Issues = "https://github.com/rajatsainju2025/code-explainer/issues"
Discussions = "https://github.com/rajatsainju2025/code-explainer/discussions"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.twine]
repository = "https://upload.pypi.org/legacy/"
repository-url = "https://upload.pypi.org/legacy/"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
branch = true
source = ["src/code_explainer"]

[tool.coverage.report]
show_missing = true
skip_covered = true
