[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "code-explainer"
version = "0.4.0"
description = "An efficient LLM-powered tool for explaining code snippets"
authors = ["Rajat Sainju <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/rajatsainju2025/code-explainer"
documentation = "https://github.com/rajatsainju2025/code-explainer#readme"
keywords = ["nlp", "transformers", "code", "explainability", "LLM"]
packages = [{include = "code_explainer", from = "src"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.scripts]
code-explainer = "code_explainer.cli_commands.main:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = ">=2.0.0,<3.0.0"
transformers = ">=4.30.0,<5.0.0"
datasets = ">=2.12.0,<3.0.0"
accelerate = ">=0.20.0,<1.0.0"
tokenizers = ">=0.13.0,<1.0.0"
pandas = ">=2.0.0,<3.0.0"
numpy = ">=1.24.0,<2.0.0"
PyYAML = ">=6.0,<7.0.0"
psutil = ">=5.9.0,<6.0.0"
click = ">=8.1.0,<9.0.0"
tqdm = ">=4.65.0,<5.0.0"
rich = ">=13.0.0,<14.0.0"
hydra-core = ">=1.3.0,<2.0.0"
omegaconf = ">=2.3.0,<3.0.0"
pydantic = ">=2.0.0,<3.0.0"
fastapi = ">=0.100.0,<1.0.0"
uvicorn = ">=0.22.0,<1.0.0"
orjson = ">=3.9.15,<4.0.0" # fast JSON serialization for FastAPI
xxhash = ">=3.0.0,<4.0.0" # 6x faster hashing for cache keys
uvloop = {version = ">=0.19.0,<1.0.0", markers = "platform_system != 'Windows'"}

[tool.poetry.extras]
rag = ["sentence-transformers", "faiss-cpu", "rank-bm25", "scikit-learn"]
metrics = ["sacrebleu", "rouge-score", "bert-score", "codebleu"]
monitoring = ["wandb", "tensorboard"]
perf = ["orjson"]
all = ["sentence-transformers", "faiss-cpu", "rank-bm25", "scikit-learn", "sacrebleu", "rouge-score", "bert-score", "codebleu", "wandb", "tensorboard", "orjson", "uvloop"]

[tool.poetry.group.rag]
optional = true

[tool.poetry.group.rag.dependencies]
sentence-transformers = ">=2.2.0,<3.0.0"
faiss-cpu = ">=1.7.0,<2.0.0"
rank-bm25 = ">=0.2.2,<1.0.0"
scikit-learn = ">=1.3.0,<2.0.0"

[tool.poetry.group.metrics]
optional = true

[tool.poetry.group.metrics.dependencies]
sacrebleu = ">=2.4.0,<3.0.0"
rouge-score = ">=0.1.2,<1.0.0"
bert-score = ">=0.3.13,<1.0.0"
codebleu = ">=0.6.0,<1.0.0"

[tool.poetry.group.monitoring]
optional = true

[tool.poetry.group.monitoring.dependencies]
wandb = ">=0.15.0,<1.0.0"
tensorboard = ">=2.13.0,<3.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0,<8.0.0"
pytest-cov = ">=4.1.0,<5.0.0"
black = ">=23.0.0,<24.0.0"
isort = ">=5.12.0,<6.0.0"
flake8 = ">=6.0.0,<7.0.0"
mypy = ">=1.4.0,<2.0.0"
pre-commit = ">=3.3.0,<4.0.0"
mkdocs = ">=1.5.0,<2.0.0"
mkdocs-material = ">=9.0.0,<10.0.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.twine]
repository = "https://upload.pypi.org/legacy/"
repository-url = "https://upload.pypi.org/legacy/"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
branch = true
source = ["src/code_explainer"]

[tool.coverage.report]
show_missing = true
skip_covered = true
